# Affinity-backend

./: .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Contributing.md  Dockerfile  Jenkinsfile  README.md  convert.sh  docker-compose.yml  docker-compose_merged.yaml  dockerpyfile.sh  registration.sh  start.sh
.github/workflows/: docker-image.yml  greetings.yml  rust.yml
entity/: Cargo.toml
entity/src/: avatar.rs  friend_list.rs  game_sessions.rs  matched.rs  matches.rs  mod.rs  pass_reset.rs  prelude.rs  user.rs  user_details.rs  users.rs
hell_charts/: Chart.yaml  values.yaml.example
hell_charts/templates/: chat-service.yaml  configmap.yaml  deployment.yaml  dind-deployment.yaml  per-oxo-deployment.yaml  peroxo-services.yaml  pvc.yaml  rabbit-consumer-deployment.yaml  rabbit-deployment.yaml  redis-deployment.yaml  redis-service.yaml  scylla-deployment.yaml  secrets.yaml  service.yaml  values.yaml
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240822_161852_create_friendlist.rs  m20240822_171309_add_field_to_friendlist.rs  m20240823_075457_create_matched.rs  m20240929_173839_pass_reset_table.rs  m20240930_194047_pass_reset_table2.rs  m20241004_152931_pass_reset3.rs  m20241103_131410_avatar_table.rs  m20250322_102921_redesign.rs  main.rs
src/: bcrypts.rs  controller.rs  db.rs  lib.rs  main.rs  model.rs
src/configs/: email_config.rs  mod.rs  totp_config.rs
src/errors/: auth.rs
src/handlers/: auth_handlers.rs  aws_handlers.rs  cp_handler.rs  crud_handlers.rs  mod.rs  tests_handlers.rs
src/middlewares/: auth.rs
src/routes/: auth.rs  aws.rs  diagnostics.rs  matchmaking.rs  mod.rs  score.rs  user.rs
src/utils/: code_extensions.rs  constants.rs  hash_token.rs  mod.rs  pass_reset.rs  scripts.rs  verify_email.rs
src/utils/hbs/: email_verification.hbs  pass_reset.hbs
testcase/: ques1.py
tests/: health_check.rs
uploads/: default_filename.txt  leet.cpp  output2.txt  ques2.py  test2.py
voice_channel/: Cargo.toml
voice_channel/src/: lib.rs  main.rs
voice_channel/src/sfu/: server.rs
voice_channel/src/signaling/: mod.rs  signals.rs
voice_channel/tests/: signals.rs
