[package]
name = "rusty_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusty_backend"


[workspace]
members = [".","migration","entity"]


[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
axum = { version = "0.7.5", features = ["multipart"] }
jsonwebtoken = "9.3.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.197"
serde_json = "1.0.114"
chrono = "0.4.38"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "1.10.0", features = ["v4"] }
bcrypt = "0.15.1"
tower-http = { version = "0.6.1", features = ["cors"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
cookie = "0.18.1"
axum-extra = { version = "0.9.3" }
json = "0.12.4"
lettre = { version = "0.11.9", features = ["tokio1-native-tls"] }
handlebars = "6.1.0"
totp-rs = "5.6.0"
rand = "0.8.5"
reqwest = "0.12.8"

