[package]
name = "voice_channel"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
tokio-tungstenite = "0.24.0"
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.10.0", features = ["v4"] }
futures-util = "0.3.31"
webrtc = "0.11.0"
